# tama

./: .gitignore  CMakeLists.txt  README.md  makefile
.github/workflows/: tests.yml
docs/: formulas.md
examples/: main.cpp
include/helpers/: helpers.hpp
include/tama/: helpers.hpp  tama.hpp
src/: dema.cpp  ema.cpp  frama.cpp  helpers.cpp  hull.cpp  md.cpp  sema.cpp  sma.cpp  tema.cpp  variations.cpp  vwma.cpp  wma.cpp
src/helper/: simd.cpp
src/tama/: dema.cpp  ema.cpp  frama.cpp  gd.cpp  hull.cpp  md.cpp  sma.cpp  tema.cpp  vwma.cpp  wma.cpp
tests/: CMakeLists.txt  dema.cpp  dema_test.cpp  ema.cpp  ema_test.cpp  helpers.cpp  main.cpp  md.cpp  ring_buffer_test.cpp  sema.cpp  simd_test.cpp  sma.cpp  sma_test.cpp  variations.cpp  variations_test.cpp  vwma.cpp  wma.cpp  wma_test.cpp
tests/helper/: ring_buffer_test.cpp  simd_test.cpp
tests/tama/: ema_test.cpp  frama_test.cpp  gd_test.cpp  hull_test.cpp  tema_test.cpp  vwma_test.cpp
